src/main/java/com/example/YICcapstone/global/error/exception/EntityNotFoundException.java
package com.example.YICcapstone.global.error.exception;

public class EntityNotFoundException extends BusinessException {
    public EntityNotFoundException() {
        super(ErrorCode.ENTITY_NOT_FOUND);
    }
}
